--- a/To-dO/index.html
+++ b/To-dO/index.html
@@ -8,19 +8,11 @@
 </head>
 <body>
     <div id="main">
-        <div style="display: flex; justify-content: center; color: white;"><h2>Tasker</h2></div>
-        <div id="adder">
-            <input id="inputBox">
-            <button id="NewTaskbutton">Add Task</button>
-        </div>
-        <div id="Taskboard">
-            <div style="display: flex; justify-content: space-between;">
-                <div><span>Do Homework</span></div>
-                <div><button>Edit</button>
-                    <button>Delete</button></div>
-            </div>
-        </div>
+        <input title="Task Name" type="text" id="newInput">
+        <button onclick="addTodo()" id="addNewButton">Add</button>
+        <div id="root"></div>
     </div>
+    
 </body>
 <script src="script.js"></script>
 </html>
