--- a/To-dO/index.html
+++ b/To-dO/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div id="main">
-        <input title="Task Name" type="text" id="newInput">
-        <button onclick="addTodo()" id="addNewButton">Add</button>
+        <div class="centered" id="head" ><h2>To-Do App</h2></div>
+        <div id="input">
+            <input title="Task Name" type="text" id="newInput" placeholder="Enter Task Name">
+            <button onclick="addTodo()" id="addNewButton">Add</button>
+        </div>
         <div id="root"></div>
     </div>
     
